# b-agentic

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  REFERENCE.md  install.sh  pyproject.toml
.github/workflows/: validate.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
claude/: README.md  mcp.user.template.json  settings.recommended.json
commands/: b-audit.md  b-browser.md  b-implement.md  b-review.md  b-spec.md
global/: AGENTS.md  CLAUDE.md
hooks/: b-skills-guard.py
pi/configs/: README.md
pi/extensions/: b-agentic-permissions.ts
pi/scripts/: install.sh  validate.sh  validate_mcp_policy.py
pi/tests/: prompt_effectiveness.py  smoke.sh
references/: accessibility-checklist.md  kernel.template.md  mcp_operations.yaml  performance-checklist.md  runtime-contract.md  security-checklist.md  testing-patterns.md
references/cards/: before-edit.md  before-ready.md  browser-boundary.md  output-handoff.md  review-verdict.md  routing.md
references/contract/: 00-kernel.md  01-routing.md  02-source-of-truth.md  03-definitions.md  04-tool-model.md  05-evidence.md  06-safety.md  index.md  (+13 more)
release-evidence/: README.md  schema.example.json  skill-evaluation.md
runtimes/: registry.yaml
scripts/: b-agentic-audit.sh  check-conformance.sh  internal-check-scenarios.sh  mcp-doctor.sh  record-release-evidence.sh  runtime-acceptance.sh  skill-doctor.sh  smoke-install.sh  validate-skills.sh  verify-release-evidence.sh
settings/: b-skills.settings.json
skills/: registry.yaml
(+281 files in other folders)
