[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "b-agentic"
version = "2026.06.03"
description = "Agent Workflow Kernel for structured AI-assisted software engineering"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = []
pythonpath = ["."]
